--- a/src/assets/styles/contacts-check.less
+++ b/src/assets/styles/contacts-check.less
@@ -1,14 +1,15 @@
-.buttonGroup {
-  margin-top: 25px !important;
-  justify-content: flex-end !important;
-}
-
-.el-form-item {
-  &:nth-of-type(n + 2) {
-    margin-top: 25px;
+.ContactsCheck {
+  .buttonGroup {
+    margin-top: 25px !important;
+    display: flex;
+    justify-content: flex-end;
   }
-}
-
-.el-date-editor {
-  width: 100% !important;
+  .el-form-item {
+    &:nth-of-type(n + 2) {
+      margin-top: 25px;
+    }
+  }
+  .el-date-editor {
+    width: 100% !important;
+  }
 }
