--- a/src/assets/styles/feedback.less
+++ b/src/assets/styles/feedback.less
@@ -1,5 +1,7 @@
-.buttonGroup {
-  margin: 40px 0 10px 0;
-  display: flex;
-  justify-content: space-between;
+.Feedback {
+  .buttonGroup {
+    margin: 40px 0 10px 0;
+    display: flex;
+    justify-content: space-between;
+  }
 }
