--- a/src/assets/styles/notice.less
+++ b/src/assets/styles/notice.less
@@ -1,24 +1,22 @@
-.el-collapse-item__header,
-.el-collapse-item__wrap {
-  background-color: @veryLightGray !important;
-}
-
-.notice-btm {
-  margin-top: 20px;
-}
-
-.notice-time {
-  padding-top: 0 !important;
-}
-
-.notice-link-col {
-  display: flex;
-  justify-content: end;
-}
-
-.notice-link {
-  &::before {
-    content: '>';
+.Notice {
+  .el-collapse-item__header,
+  .el-collapse-item__wrap {
+    background-color: @veryLightGray !important;
   }
-  margin-right: 20px;
+  .notice-btm {
+    margin-top: 20px;
+  }
+  .notice-time {
+    padding-top: 0 !important;
+  }
+  .notice-link-col {
+    display: flex;
+    justify-content: end;
+  }
+  .notice-link {
+    &::before {
+      content: '>';
+    }
+    margin-right: 20px;
+  }
 }
