--- a/src/assets/styles/statistics.less
+++ b/src/assets/styles/statistics.less
@@ -1,22 +1,23 @@
-.el-table-common {
-  background-color: @veryLightGray !important;
-}
-
-.el-table-row {
-  &:extend(.el-table-common);
-}
-
-.el-table-header-cell {
-  &:extend(.el-table-common);
-}
-
-.header-left {
-  display: flex;
-  align-items: center;
-}
-
-.header-right {
-  display: flex;
-  justify-content: flex-end;
-  align-items: center;
+.Statistics {
+  .el-table-common {
+    background-color: @veryLightGray !important;
+  }
+  .el-table__cell {
+    &:extend(.Statistics .el-table-common);
+  }
+  .el-table-row {
+    &:extend(.Statistics .el-table-common);
+  }
+  .el-table-header-cell {
+    &:extend(.Statistics .el-table-commonn);
+  }
+  .header-left {
+    display: flex;
+    align-items: center;
+  }
+  .header-right {
+    display: flex;
+    justify-content: flex-end;
+    align-items: center;
+  }
 }
