--- a/src/assets/styles/hello-world.less
+++ b/src/assets/styles/hello-world.less
@@ -1,14 +1,22 @@
-.el-header,
-.el-footer {
-  background-color: #b3c0d1;
-  color: #333;
-}
-
-.el-aside {
-  padding: 20px;
-  background-color: @veryLightGray;
-}
-
-.el-main {
+.HelloWorld {
+  .el-header,
+  .el-footer {
+    &:extend(.HelloWorld);
+    height: auto !important;
+    padding: 0;
+    margin: 0 40px;
+  }
+  .el-footer {
+    margin-bottom: 40px;
+  }
+  .el-aside {
+    &:extend(.HelloWorld);
+    padding: 20px;
+    padding-top: 0;
+  }
+  .el-main {
+    padding-top: 0;
+    padding-bottom: 30px;
+  }
   background-color: @veryLightGray;
 }
